# backend/routes/blog.js
@@ -4,8 +4,7 @@ const blogModel = require('../controller/user')
 
 router.use(bodyParser.json());
 
-router.post('/v1/blog', blogModel.createBlog);
-router.get('/v1/blog/:id', blogModel.getBlog);
+
 
 module.exports = {
     router
