# backend/routes/user.js
@@ -11,6 +11,8 @@ router.post('/v1/user/login', userModel.login);
 
 router.post('/v1/blog', blogModel.createBlog);
 router.get('/v1/blog/:id', blogModel.getBlog);
+router.get('/v1/blogs/recent', blogModel.getRecentBlog);
+router.delete('/v1/blog/:id', blogModel.deleteBlog);
 router.get('/v1/blogs', blogModel.getBlogs);
 
 module.exports = {
